Adding missing checks for card migration settings page triggering point.

1) Check if Autofill Upstream feature is enabled.

2) Check if the user has a secondary passphrase.

3) Check if upload to Google Payments is active.

4) Check if email domain is allowed.

The goal is to replicate the checks here [1] in settings.

[1] https://cs.chromium.org/chromium/src/components/autofill/core/browser/autofill_experiments.cc?l=102-146&rcl=27507d2949dcd66de55f2fc06ffe638b2e5c971b

Bug: 880554, 852904
Change-Id: I03d7cc79e16000580f5ecf29fdf1ccbbd19a355a
Reviewed-on: https://chromium-review.googlesource.com/c/1269723
Commit-Queue: Siyu An <siyua@chromium.org>
Reviewed-by: Jared Saul <jsaul@google.com>
Reviewed-by: Hector Carmona <hcarmona@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598194}