chrome/test/data/webui/settings/payments_section_test.js
@@ -27,6 +27,14 @@ cr.define('settings_payments_section', function() {
       syncBrowserProxy = new TestSyncBrowserProxy();
       settings.SyncBrowserProxyImpl.instance_ = syncBrowserProxy;
       PolymerTest.clearBody();
+      loadTimeData.overrideValues({
+        migrationEnabled: true,
+        hasGooglePaymentsAccount: true,
+        upstreamEnabled: true,
+        isUsingSecondaryPassphrase: false,
+        uploadToGoogleActive: true,
+        userEmailDomainAllowed: true
+      });
     });
 
     /**
@@ -397,8 +405,7 @@ cr.define('settings_payments_section', function() {
     test('verifyMigrationButtonNotShownIfMigrationNotEnabled', function() {
       // Mock the Google Payments account. Disable the migration experimental
       // flag. Won't show migration button.
-      loadTimeData.overrideValues(
-          {migrationEnabled: false, hasGooglePaymentsAccount: true});
+      loadTimeData.overrideValues({migrationEnabled: false});
 
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
@@ -418,11 +425,6 @@ cr.define('settings_payments_section', function() {
     });
 
     test('verifyMigrationButtonNotShownIfNotSignedIn', function() {
-      // Enable the migration experimental flag and mock Google payments
-      // account.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: true});
-
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
       creditCard.metadata.isMigratable = true;
@@ -441,11 +443,6 @@ cr.define('settings_payments_section', function() {
     });
 
     test('verifyMigrationButtonNotShownIfNotSynced', function() {
-      // Enable the migration experimental flag and mock Google payments
-      // account.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: true});
-
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
       creditCard.metadata.isMigratable = true;
@@ -464,11 +461,6 @@ cr.define('settings_payments_section', function() {
     });
 
     test('verifyMigrationButtonNotShownIfNoMigratableCard', function() {
-      // Enable the migration experimental flag and mock Google payments
-      // account.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: true});
-
       // Add one credit card but not migratable. Won't show migration button.
       const creditCard = FakeDataMaker.creditCardEntry();
       creditCard.metadata.isMigratable = false;
@@ -487,11 +479,6 @@ cr.define('settings_payments_section', function() {
     });
 
     test('verifyMigrationButtonNotShownWhenCreditCardDisabled', function() {
-      // Enable the migration experimental flag and mock Google payments
-      // account.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: true});
-
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
       creditCard.metadata.isMigratable = true;
@@ -510,10 +497,8 @@ cr.define('settings_payments_section', function() {
     });
 
     test('verifyMigrationButtonNotShownIfNoGooglePaymentsAccount', function() {
-      // Enable the migration experimental flag and mocks no Google payments
-      // account. Won't show migration button.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: false});
+      // Mocks no Google payments account. Won't show migration button.
+      loadTimeData.overrideValues({hasGooglePaymentsAccount: false});
 
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
@@ -532,12 +517,93 @@ cr.define('settings_payments_section', function() {
       assertTrue(section.$$('#migrateCreditCards').hidden);
     });
 
-    test('verifyMigrationButtonShown', function() {
-      // Enable the migration experimental flag and mock Google payments
-      // account.
-      loadTimeData.overrideValues(
-          {migrationEnabled: true, hasGooglePaymentsAccount: true});
+    test('verifyMigrationButtonNotShownIfAutofillUpstreamDisabled', function() {
+      loadTimeData.overrideValues({upstreamEnabled: false});
 
+      // Add one migratable credit card.
+      const creditCard = FakeDataMaker.creditCardEntry();
+      creditCard.metadata.isMigratable = true;
+      const section = createPaymentsSection(
+          [creditCard], {credit_card_enabled: {value: true}});
+
+      // Simulate Signed-in and Synced status.
+      sync_test_util.simulateSyncStatus({
+        signedIn: true,
+        syncSystemEnabled: true,
+      });
+
+      // All migration requirements are met but Autofill Upstream is disabled,
+      // verify migration button is hidden.
+      assertTrue(section.$$('#migrateCreditCards').hidden);
+    });
+
+    test(
+        'verifyMigrationButtonNotShownIfUserHasSecondaryPassphrase',
+        function() {
+          loadTimeData.overrideValues({isUsingSecondaryPassphrase: true});
+
+          // Add one migratable credit card.
+          const creditCard = FakeDataMaker.creditCardEntry();
+          creditCard.metadata.isMigratable = true;
+          const section = createPaymentsSection(
+              [creditCard], {credit_card_enabled: {value: true}});
+
+          // Simulate Signed-in and Synced status.
+          sync_test_util.simulateSyncStatus({
+            signedIn: true,
+            syncSystemEnabled: true,
+          });
+
+          // All migration requirements are met but the user has a secondary
+          // passphrase, verify migration button is hidden.
+          assertTrue(section.$$('#migrateCreditCards').hidden);
+        });
+
+    test(
+        'verifyMigrationButtonNotShownIfUploadToGoogleStateIsInactive',
+        function() {
+          loadTimeData.overrideValues({uploadToGoogleActive: false});
+
+          // Add one migratable credit card.
+          const creditCard = FakeDataMaker.creditCardEntry();
+          creditCard.metadata.isMigratable = true;
+          const section = createPaymentsSection(
+              [creditCard], {credit_card_enabled: {value: true}});
+
+          // Simulate Signed-in and Synced status.
+          sync_test_util.simulateSyncStatus({
+            signedIn: true,
+            syncSystemEnabled: true,
+          });
+
+          // All migration requirements are met but upload to Google is
+          // inactive, verify migration button is hidden.
+          assertTrue(section.$$('#migrateCreditCards').hidden);
+        });
+
+    test(
+        'verifyMigrationButtonNotShownIfUserEmailDomainIsNotAllowed',
+        function() {
+          loadTimeData.overrideValues({userEmailDomainAllowed: false});
+
+          // Add one migratable credit card.
+          const creditCard = FakeDataMaker.creditCardEntry();
+          creditCard.metadata.isMigratable = true;
+          const section = createPaymentsSection(
+              [creditCard], {credit_card_enabled: {value: true}});
+
+          // Simulate Signed-in and Synced status.
+          sync_test_util.simulateSyncStatus({
+            signedIn: true,
+            syncSystemEnabled: true,
+          });
+
+          // All migration requirements are met but the user's email domain is
+          // not allowed, verify migration button is hidden.
+          assertTrue(section.$$('#migrateCreditCards').hidden);
+        });
+
+    test('verifyMigrationButtonShown', function() {
       // Add one migratable credit card.
       const creditCard = FakeDataMaker.creditCardEntry();
       creditCard.metadata.isMigratable = true;
